# sushi-eda

./: .env.example  .gitignore  AUTH_DOMAIN_SETUP.md  CLAUDE.md  CODEBASE_INIT.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DESIGN_BRIEF.md  FEATURES.md  LAUNCH_MATRIX.md  LAUNCH_PLAN.md  LICENSE  MVP_LAUNCH_MATRIX.md  NON_TECH_UX_PLAN.md  PUBLIC_LAUNCH.md  R2_SETUP.md  README.md  SMOKE_TEST_REPORT.md  VERCEL_SETUP.md  docker-compose.override.yml  docker-compose.yml  railway.toml  render.yaml  requirements.txt  vercel.json
.claude/: settings.local.json
.openai/: hosting.json
api/: index.py
backend/: .dockerignore  .env.example  Dockerfile  advanced_stats.py  ai_chat.py  ai_cleaning.py  ai_credits.py  ai_limits.py  ai_narrative.py  alembic.ini  analysis_runner.py  analyzer.py  auth.py  cache.py  cleaner.py  defaults.py  duckdb_query.py  export_utils.py  main.py  polars_loader.py  quality_score.py  railway.json  render.yaml  requirements.txt  retention.py  storage.py  type_detector.py  visualizer.py  worker.py
backend/db/: models.py  (+3 more)
chrome-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
cli/: README.md  pyproject.toml
cli/sushi_cli/: __init__.py  api.py  config.py  main.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vercel.json
sample_data/: TEST_GUIDE.md  customer_data.csv  test_complete.csv  test_complete.json  test_complete.xlsx  test_data.json
scripts/: deploy-backend.sh  deploy-frontend.sh  test-all.sh
(+215 files in other folders)
